# ai-pr-readiness-checker

./: LICENSE  README.md  check_pr_readiness.py  pyproject.toml  requirements-dev.txt
.circleci/: config.yml
pr_readiness/: __init__.py  quality.py  scoring.py
tests/: test_quality.py  test_scoring.py
